# robot_properties_fingers

./: .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  MUJOCO_LOG.TXT  README.md  doc_mainpage.rst  package.xml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_master.yml  lint.yml  test.yml
doc/: breathing_cat.toml  installation.rst  kinematics.rst  models.rst  world_frame_and_joint_axes.rst
launch/: manipulator_visual_rviz.launch
meshes/stl/: BL-M_Table_ASM_small.stl  Tip_link_Modular_SIM.stl
meshes/stl/full/: BL_Finger_Holder_SIM.stl  SIM__BL-Finger_Intermediate.stl
meshes/stl/new/: SIM__BL-Finger_Intermediate.stl  SIM__BL-Finger_Proximal.stl
meshes/stl/old_01/: sim_bl_manipulator_base_link.stl  sim_bl_manipulator_intermediate_link.stl  sim_bl_manipulator_proximal_link.stl  sim_bl_manipulator_tip_link.stl
meshes/stl/old_02/: BL_Finger_Holder_SIM.stl  SIM_BL-Finger_Tip.stl  SIM__BL-Finger_Basis_Gelenk.stl  SIM__BL-Finger_Intermediate.stl  SIM__BL-Finger_Proximal.stl
meshes/stl/old_03/: SIM__BL-Finger_Proximal.stl
meshes/stl/pro/: SIM__BL-Finger_Base.stl  SIM__BL-Finger_Proximal.stl
meshes/stl/uncut_full/: BL-M_Table_ASM_big.stl  SIM_BL_FINGER_TIP_LINK.stl
mjb/: manipulator.mjb  manipulator.txt  manipulator.xml  manipulator06.mjb  manipulator06.xml
robot_properties_fingers/: __init__.py  pinocchio_utils.py
rviz/: display.rviz
src/robot_properties_fingers/: __init__.py  pinocchio_utils.py  trifingerpro_ik.py
tests/: speedtest_ik.py  test_init.py  test_pinocchio_utils.py  test_trifingerpro_ik.py  trifingerpro_kinematics_data.json
urdf/: manipulator.urdf
xacro/: finger.urdf.xacro  finger_macro.urdf.xacro  finger_with_stage.urdf.xacro  macros.xacro  manipulator.urdf.xacro  new_finger.urdf.xacro  new_finger_macro.urdf.xacro  new_trifinger.urdf.xacro  new_trifinger_with_stage.urdf.xacro  stage.urdf.xacro  trifinger.urdf.xacro  trifinger_stage.urdf.xacro  trifinger_with_stage.urdf.xacro
xacro/edu/: fingeredu.urdf.xacro  fingeredu_macro.xacro  trifingeredu.urdf.xacro  trifingeredu_stage.urdf.xacro  trifingeredu_with_stage.urdf.xacro
xacro/pro/: fingerpro.urdf.xacro  fingerpro_macro.xacro  trifingerpro.urdf.xacro  trifingerpro_with_stage.urdf.xacro
xacro_files/: finger.urdf.xacro  finger_macro.urdf.xacro  trifinger_with_stage.urdf.xacro
xacro_files/edu/: fingeredu.urdf.xacro  fingeredu_macro.xacro  trifingeredu.urdf.xacro
xacro_files/pro/: fingerpro.urdf.xacro  fingerpro_macro.xacro  trifingerpro.urdf.xacro
