<?xml version="1.0"?>
<package format="2">
    <name>robot_properties_fingers</name>
    <version>1.0.0</version>
    <description>robot_properties_fingers</description>
    <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>
    <license>BSD 3-clause</license>

    <buildtool_depend>catkin</buildtool_depend>

    <!-- We need the xacro package to build the urdf model -->
    <build_depend>xacro</build_depend>

    <export>
    </export>
</package>
