<?xml version="1.0"?>
<package format="2">
    <name>robot_properties_fingers</name>
    <version>1.0.0</version>
    <description>Xacro files and meshes of the (Tri-)Finger robots.</description>
    <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>
    <license>BSD 3-clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- We need the xacro package to build the urdf model -->
    <build_depend>xacro</build_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
