<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>robot_properties_fingers</name>
    <version>2.0.0</version>
    <description>URDF files and meshes of the (Tri-)Finger robots.</description>
    <maintainer email="felix.widmaier@tue.mpg.de">Felix Widmaier</maintainer>
    <license>BSD-3-Clause</license>

    <!-- We need the xacro package to build the urdf model -->
    <build_depend>xacro</build_depend>

    <exec_depend>pinocchio</exec_depend>

    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
