[build-system]
requires = ["setuptools", "xacro"]
build-backend = "setuptools.build_meta"


[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.mypy]
exclude = "doc/"

[[tool.mypy.overrides]]
# list all modules for which no type hints are available
module = [
    "xacro",
    "pinocchio",
    "pytest",
    "setuptools.*",
]
ignore_missing_imports = true

[tool.ruff]
# enable all and disable a few via ignore below
select = ["ALL"]
extend-ignore = [
    "BLE",
    "COM",
    "EM",
    "FBT",
    "INP",
    "PTH",
    "S",
    "T20",
    "UP",
    "A003",
    "ANN101",
    "ANN102",
    "ANN401",
    "D105",
    "D107",
    "D205",
    "D212",
    "D417",
    "G004",
    "I001",
    "N806",
    "PLR0913",
    "PTH123",
    "RET505",
    "TRY003",
    "TRY400",
]
target-version = "py310"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"*.pyi" = ["ALL"]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["D", "ANN", "PLR2004"]
"scripts/*" = ["D"]


[tool.pytest.ini_options]
# Explicitly specifying the test directory here is needed for `colcon test`, otherwise
# it insists on importing robot_properties_fingers from the source directory for some
# reason (which fails as URDF files only exist in the install space).
# See https://robotics.stackexchange.com/q/112352/16508
testpaths = "tests"
addopts = [
    "--import-mode=importlib",
]
