[build-system]
requires = ["setuptools", "xacro"]
build-backend = "setuptools.build_meta"


[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.mypy]
exclude = "doc/"

[[tool.mypy.overrides]]
# list all modules for which no type hints are available
module = [
    "xacro",
    "pinocchio",
    "pytest",
    "setuptools.*",
]
ignore_missing_imports = true


[tool.ruff]
target-version = "py312"

# for a complete list of available rules see https://docs.astral.sh/ruff/rules/
# TODO commented-out rules below should be enabled but currently result in quite
# a lot of warnings, which need to be fixed first.
lint.select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle
    "B", # bugbear
    "I", # isort
    "N", # naming
    # "UP", # pyupgrade
    "A", # builtins
    "FA", # future-annotations
    "G", # logging-format
    "PT", # pytest-style
    "SIM", # simplify
    "ARG", # unused-arguments
    "PL", # pylint
    "NPY", # numpy
    "RUF100",  # unused 'noqa' directive
]
lint.ignore = [
    "N806",  # let's allow upper case variables for math stuff
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["ALL"]
"__init__.py" = ["F401"]  # unused imports
"tests/*" = ["D", "ANN", "PLR2004"]
"scripts/*" = ["D"]


[tool.pytest.ini_options]
# Explicitly specifying the test directory here is needed for `colcon test`, otherwise
# it insists on importing robot_properties_fingers from the source directory for some
# reason (which fails as URDF files only exist in the install space).
# See https://robotics.stackexchange.com/q/112352/16508
testpaths = "tests"
addopts = [
    "--import-mode=importlib",
]
